deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bun-app
  namespace: phayu-namespace
spec:
  type: NodePort
  selector:
    app: bun-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30080
